First profile page logic
Initial profile page done