@@ -115,11 +115,10 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.1</version>
         <configuration>
-          <source>11</source>
-          <target>11</target>
-          <compilerArgs>
-            <arg>--release</arg>
-            <arg>11</arg>
+          <source>22</source>
+          <target>22</target>
+          <compilerArgs>--enable-preview
+              <arg>11</arg>
           </compilerArgs>
         </configuration>
       </plugin>
